# MegaFactory-SQL

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md
.claude/agents/: product-designer.md  web-developer.md
.github/workflows/: ci.yml
crates/megafactory-sql-app/: Cargo.toml
crates/megafactory-sql-app/src/: lib.rs  storage.rs
crates/megafactory-sql-app/src/components/: auto_refresh.rs  chart.rs  codemirror.rs  keyboard.rs  mod.rs  modal.rs  pod_card.rs  query_history.rs  query_plan.rs  result_table.rs  scaling_panel.rs  schema_tree.rs  sidebar.rs  storage_panel.rs  tab_bar.rs  toast.rs
crates/megafactory-sql-app/src/pages/: configurator.rs  connections.rs  k8s_dashboard.rs  mod.rs  monitoring.rs  schema_browser.rs  settings.rs  sql_editor.rs  workbench.rs
crates/megafactory-sql-app/src/state/: connection.rs  k8s.rs  mod.rs  query.rs  schema.rs  settings.rs  toast.rs  websocket.rs
crates/megafactory-sql-server/: Cargo.toml
crates/megafactory-sql-server/src/: config.rs  main.rs  websocket.rs
crates/megafactory-sql-server/src/proxy/: k8s.rs  megadb.rs  mod.rs  prometheus.rs
crates/megafactory-sql-types/: Cargo.toml
crates/megafactory-sql-types/src/: advisor.rs  configurator.rs  connection.rs  explain.rs  k8s.rs  lib.rs  metrics.rs  query.rs  schema.rs  toast.rs  ws.rs
docker/: Dockerfile  docker-compose.yml
frontend/: next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: client-layout.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/analytics/configurator/: page.tsx
frontend/src/app/analytics/monitoring/: page.tsx
frontend/src/app/analytics/workbench/: page.tsx
frontend/src/app/configurator/: page.tsx
frontend/src/app/connections/: page.tsx
frontend/src/app/infra/external-tables/: page.tsx
frontend/src/app/infra/k8s/: page.tsx
frontend/src/app/infra/object-stores/: page.tsx
frontend/src/app/infra/storage/: page.tsx
frontend/src/app/k8s/: page.tsx
frontend/src/app/monitoring/: page.tsx
frontend/src/app/schema/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/sql/: page.tsx
frontend/src/app/workbench/: page.tsx
frontend/src/components/editor/: EditorToolbar.tsx  MonacoEditor.tsx  TabBar.tsx
frontend/src/components/external-table/: DataPreview.tsx  ExternalTableForm.tsx  ExternalTableList.tsx
frontend/src/components/infra/: ClusterHealthBadge.tsx  K8sEventFeed.tsx  PodCard.tsx  PodGauge.tsx  ScaleControl.tsx  ServiceTable.tsx  VolumeTable.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/components/object-store/: ConnectionCard.tsx  ConnectionForm.tsx  ConnectionTestButton.tsx  ProviderIcon.tsx
frontend/src/components/providers/: QueryProvider.tsx
frontend/src/components/query/: QueryHistory.tsx  QueryPlanViewer.tsx  ResultTable.tsx
frontend/src/components/storage/: TableEngineTable.tsx  TablespaceList.tsx  TierCard.tsx
frontend/src/components/ui/: Toast.tsx
frontend/src/lib/: nav-config.ts  storage.ts
frontend/src/lib/api/: client.ts  index.ts  k8s.ts  megadb.ts  prometheus.ts
frontend/src/lib/duckdb/: arrow-utils.ts  instance.ts  query-executor.ts
frontend/src/stores/: connection-store.ts  k8s-store.ts  object-store-store.ts  query-store.ts  schema-store.ts  settings-store.ts  storage-store.ts  toast-store.ts  websocket-store.ts
frontend/src/types/: advisor.ts  connection.ts  explain.ts  index.ts  k8s.ts  metrics.ts  object-store.ts  query.ts  schema.ts  storage-tier.ts  toast.ts  ws.ts
js/: codemirror-bridge.js
k8s/: deployment.yaml  service.yaml
scripts/: local-k8s-deploy.sh
style/: main.css
