[package]
name = "megafactory-sql-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types for MegaFactory SQL (server + WASM client)"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
